fix spacing text

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto','Monserrat', sans-serif;
-    color: white;
+    color: rgb(163,163,163);
 }
 
 .d-flex{
@@ -43,7 +43,7 @@ header{
     border-radius: 30px;
     padding: 10px 30px;
     background-color: rgb(8,11,18);
-
+    color: white;
 }
 
 header a{
@@ -100,11 +100,11 @@ footer{
 }
 
 .playlist-text{
-    margin-left: 5px;
+    margin: 5px 10px;
     vertical-align: 50%;
 }
 .menu-text{
-    margin-left: 5px;
+    margin: 5px 10px;
     vertical-align: 50%;
 }
 
@@ -125,11 +125,13 @@ footer{
 
 .bold{
     font-weight: bold;
+    color: white;
 }
 
 #profile{
     border-radius: 50%;
     background-color: rgb(128,128,128);
+
 }
 
 .content{
